--- a/src/app/debug/components/debug-components.component.html
+++ b/src/app/debug/components/debug-components.component.html
@@ -4,6 +4,13 @@
     <div class="debug-title">Inputs</div>
     <div>
       <section>
+        <div class="debug-label">Loading</div>
+        <div class="debug-row">
+          <pdz-loading></pdz-loading>
+        </div>
+      </section>
+      <mat-divider inset></mat-divider>
+      <section>
         <div class="debug-label">Sliders</div>
         <div class="debug-row">
           <mat-slider min="0" max="100" step="5" showTickMarks discrete>
