--- a/src/app/drafts/draft-overview/draft-form/draft-form-edit/draft-form-edit.component.html
+++ b/src/app/drafts/draft-overview/draft-form/draft-form-edit/draft-form-edit.component.html
@@ -18,7 +18,7 @@
         (formSubmitted)="editDraft($event)"
       ></draft-form-core>
     } @else {
-      <loading></loading>
+      <pdz-loading></pdz-loading>
     }
   </div>
 </div>
