--- a/src/app/drafts/matchup-overview/matchup-overview.component.html
+++ b/src/app/drafts/matchup-overview/matchup-overview.component.html
@@ -188,6 +188,6 @@
   @if (matchupData) {
     <matchup [matchupData]="matchupData"></matchup>
   } @else {
-    <loading></loading>
+    <pdz-loading></pdz-loading>
   }
 </div>
