--- a/src/app/drafts/opponent-overview/opponent-form/opponent-form.component.html
+++ b/src/app/drafts/opponent-overview/opponent-form/opponent-form.component.html
@@ -18,7 +18,7 @@
         (formSubmitted)="saveOpponent($event)"
       ></opponent-form-core>
     } @else {
-      <loading></loading>
+      <pdz-loading></pdz-loading>
     }
   </div>
 </div>
