--- a/src/app/drafts/opponent-overview/opponent-score/opponent-score.component.html
+++ b/src/app/drafts/opponent-overview/opponent-score/opponent-score.component.html
@@ -1,5 +1,5 @@
 @if (!scoreForm) {
-  <loading></loading>
+  <pdz-loading></pdz-loading>
 } @else {
   <form [formGroup]="scoreForm" class="opponent-score">
     <header class="opponent-score__header">
