--- a/src/app/league-zone/league-drafting/league-drafting.component.html
+++ b/src/app/league-zone/league-drafting/league-drafting.component.html
@@ -1,6 +1,6 @@
 <app-league-notifications></app-league-notifications>
 @if (isLoading) {
-  <loading></loading>
+  <pdz-loading></pdz-loading>
 } @else {
   <div class="main-league-container">
     <div class="draft-panel">
