--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -127,7 +127,7 @@
     </div>
   </form>
 } @else {
-  <loading></loading>
+  <pdz-loading></pdz-loading>
 }
 
 <!-- {{ plannerForm.value | json }} {{ tabSelected | json }} -->
