--- a/src/app/tools/replay_analyzer/replay.component.html
+++ b/src/app/tools/replay_analyzer/replay.component.html
@@ -31,7 +31,7 @@
     <a href="https://discord.gg/sQUEBW4UVx" class="text-blue-500">Discord</a>.
   </div>
 </div>
-<!-- <loading *ngIf="analyzed && !replayData"></loading> -->
+<!-- <loading *ngIf="analyzed && !replayData"></pdz-loading> -->
 <div *ngIf="replayData" class="flex justify-center w-full p-2">
   <div
     class="flex flex-col items-center p-2 border-2 max-w-full w-fit bg-menu-100 rounded-xl border-menu-400"
