--- a/src/app/drafts/draft-overview/draft-archives/draft-archives.component.html
+++ b/src/app/drafts/draft-overview/draft-archives/draft-archives.component.html
@@ -8,72 +8,76 @@
     </button>
     <p class="px-6 text-2xl font-nasa font-bold">Archived Drafts</p>
   </div>
-  <loading *ngIf="!archives"></loading>
-  <div
-    *ngIf="archives"
-    id="archives"
-    class="grid h-auto grid-flow-row grid-cols-1 gap-4 p-2 overflow-auto md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4"
-  >
-    <div *ngFor="let archive of archives">
-      <div
-        class="flex flex-col h-full shadow-md bg-aTeam-200 shadow-aTeam-600 rounded-xl"
-      >
-        <div class="flex-grow p-2 shadow-md bg-aTeam-300 rounded-xl">
-          <div class="flex items-center w-full space-x-2 h-fit">
+  @if (!archives) {
+    <pdz-loading></pdz-loading>
+  } @else {
+    <div
+      id="archives"
+      class="grid h-auto grid-flow-row grid-cols-1 gap-4 p-2 overflow-auto md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4"
+    >
+      <div *ngFor="let archive of archives">
+        <div
+          class="flex flex-col h-full shadow-md bg-aTeam-200 shadow-aTeam-600 rounded-xl"
+        >
+          <div class="flex-grow p-2 shadow-md bg-aTeam-300 rounded-xl">
+            <div class="flex items-center w-full space-x-2 h-fit">
+              <div
+                class="flex items-center justify-center w-3/5 h-auto p-1 overflow-hidden font-semibold text-center whitespace-normal rounded-full shadow-inner text-medium bg-aTeam-200 shadow-aTeam-600 overflow-ellipsis"
+              >
+                {{ archive.leagueName }}
+              </div>
+              <div
+                class="flex items-center justify-center w-1/5 p-1 overflow-hidden text-xs font-semibold text-center whitespace-normal rounded-full shadow-inner h-fit bg-aTeam-200 shadow-aTeam-600 overflow-ellipsis"
+              >
+                {{ archive.ruleset }}
+              </div>
+              <div
+                class="flex items-center justify-center w-1/5 p-1 overflow-hidden text-xs font-semibold text-center whitespace-normal rounded-full shadow-inner h-fit bg-aTeam-200 shadow-aTeam-600 overflow-ellipsis"
+              >
+                {{ archive.format }}
+              </div>
+            </div>
+            <div class="grid grid-cols-6 px-4 pt-2 sprites">
+              <pdz-sprite
+                *ngFor="let pokemon of archive.team"
+                [pokemon]="{ id: pokemon.id, name: pokemon.name }"
+              ></pdz-sprite>
+            </div>
+          </div>
+          <div class="flex p-2" *ngIf="archive.menu == 'main'">
             <div
-              class="flex items-center justify-center w-3/5 h-auto p-1 overflow-hidden font-semibold text-center whitespace-normal rounded-full shadow-inner text-medium bg-aTeam-200 shadow-aTeam-600 overflow-ellipsis"
+              class="grid items-center justify-center grid-cols-3 gap-2 px-2"
             >
-              {{ archive.leagueName }}
+              <trash-svg
+                class="w-8 h-8 p-1 shadow rounded-xl hover:cursor-pointer hover:shadow bg-aTeam-300 shadow-aTeam-600"
+                alt="Delete"
+                title="Delete"
+                (click)="archive.menu = 'delete'"
+              >
+              </trash-svg>
+            </div>
+          </div>
+          <div class="flex" *ngIf="archive.menu == 'delete'">
+            <div
+              class="w-2/3 m-2 text-center shadow bg-aTeam-300 shadow-aTeam-600 rounded-xl"
+            >
+              Are you sure you want to delete? This can not be undone.
             </div>
             <div
-              class="flex items-center justify-center w-1/5 p-1 overflow-hidden text-xs font-semibold text-center whitespace-normal rounded-full shadow-inner h-fit bg-aTeam-200 shadow-aTeam-600 overflow-ellipsis"
+              class="flex items-center justify-center w-1/6 m-2 shadow cursor-pointer bg-aTeam-300 hover:shadow shadow-aTeam-600 rounded-xl"
+              (click)="delete(archive._id)"
             >
-              {{ archive.ruleset }}
+              Yes
             </div>
             <div
-              class="flex items-center justify-center w-1/5 p-1 overflow-hidden text-xs font-semibold text-center whitespace-normal rounded-full shadow-inner h-fit bg-aTeam-200 shadow-aTeam-600 overflow-ellipsis"
+              class="flex items-center justify-center w-1/6 m-2 shadow cursor-pointer bg-aTeam-300 hover:shadow shadow-aTeam-600 rounded-xl"
+              (click)="archive.menu = 'main'"
             >
-              {{ archive.format }}
+              No
             </div>
-          </div>
-          <div class="grid grid-cols-6 px-4 pt-2 sprites">
-            <pdz-sprite
-              *ngFor="let pokemon of archive.team"
-              [pokemon]="{ id: pokemon.id, name: pokemon.name }"
-            ></pdz-sprite>
-          </div>
-        </div>
-        <div class="flex p-2" *ngIf="archive.menu == 'main'">
-          <div class="grid items-center justify-center grid-cols-3 gap-2 px-2">
-            <trash-svg
-              class="w-8 h-8 p-1 shadow rounded-xl hover:cursor-pointer hover:shadow bg-aTeam-300 shadow-aTeam-600"
-              alt="Delete"
-              title="Delete"
-              (click)="archive.menu = 'delete'"
-            >
-            </trash-svg>
-          </div>
-        </div>
-        <div class="flex" *ngIf="archive.menu == 'delete'">
-          <div
-            class="w-2/3 m-2 text-center shadow bg-aTeam-300 shadow-aTeam-600 rounded-xl"
-          >
-            Are you sure you want to delete? This can not be undone.
-          </div>
-          <div
-            class="flex items-center justify-center w-1/6 m-2 shadow cursor-pointer bg-aTeam-300 hover:shadow shadow-aTeam-600 rounded-xl"
-            (click)="delete(archive._id)"
-          >
-            Yes
-          </div>
-          <div
-            class="flex items-center justify-center w-1/6 m-2 shadow cursor-pointer bg-aTeam-300 hover:shadow shadow-aTeam-600 rounded-xl"
-            (click)="archive.menu = 'main'"
-          >
-            No
           </div>
         </div>
       </div>
     </div>
-  </div>
+  }
 </div>
