--- a/src/app/drafts/matchup-overview/matchup-shared.component.html
+++ b/src/app/drafts/matchup-overview/matchup-shared.component.html
@@ -34,6 +34,6 @@
   @if (matchupData) {
     <matchup [matchupData]="matchupData"></matchup>
   } @else {
-    <loading></loading>
+    <pdz-loading></pdz-loading>
   }
 </div>
