--- a/src/app/league-zone/league-tier-list/league-tier-list.component.html
+++ b/src/app/league-zone/league-tier-list/league-tier-list.component.html
@@ -191,7 +191,7 @@
           </div>
         </div>
       } @else {
-        <loading></loading>
+        <pdz-loading></pdz-loading>
       }
 
       @if (selectedPokemon) {
