--- a/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.html
+++ b/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.html
@@ -118,7 +118,7 @@
           }
         </div>
       } @else {
-        <loading></loading>
+        <pdz-loading></pdz-loading>
       }
     </div>
   </div>
