--- a/src/app/tools/quick-matchup/quick-matchup-base.component.html
+++ b/src/app/tools/quick-matchup/quick-matchup-base.component.html
@@ -57,7 +57,7 @@
     @if (matchupData) {
       <matchup [matchupData]="matchupData"></matchup>
     } @else {
-      <loading />
+      <pdz-loading />
     }
   </div>
 }
