matchup color fixes

--- a/src/app/drafts/matchup-overview/matchup-overview.component.html
+++ b/src/app/drafts/matchup-overview/matchup-overview.component.html
@@ -1,8 +1,6 @@
 <div class="matchup-main">
   <div class="matchup-header">
-    <button mat-flat-button [routerLink]="['/', draftPath, leagueId]">
-      Back
-    </button>
+    <button [routerLink]="['/', draftPath, leagueId]">Back</button>
     <div class="details-spacer">
       <div class="details-container">
         @if (matchupData) {
@@ -35,7 +33,6 @@
     </div>
     @if (matchupData) {
       <button
-        mat-flat-button
         (click)="shared = !shared"
         cdkOverlayOrigin
         #shareTrigger="cdkOverlayOrigin"
