--- a/src/app/drafts/matchup-overview/matchup/typechart/typechart.component.html
+++ b/src/app/drafts/matchup-overview/matchup/typechart/typechart.component.html
@@ -1,4 +1,4 @@
-<div class="widget-container" [ngClass]="{ alternate: opponent }">
+<div class="widget-container" [class.alternate]="opponent">
   <div class="widget-header">
     <div class="widget-label">Defensive Type Chart</div>
     <div class="widget-options">
