--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,9 +1,13 @@
 <div class="homepage-main">
   <div class="hero-section">
     <div class="title-container">
-      <span class="title-text"> POKEMON </span>
+      <span class="title-text mobile-hidden"> POKEMON </span>
       <pdz-icon name="logo-small" class="title-logo"></pdz-icon>
-      <span class="title-text"> DRAFTZONE </span>
+      <span class="title-text mobile-container">
+        <span class="mobile-show"> POKEMON </span>
+
+        <span class=""> DRAFTZONE </span>
+      </span>
     </div>
     <p class="subtitle">
       Your ultimate destination for Pokémon drafting and league management.
