--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -12,7 +12,7 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <div class="option">
+      <!-- <div class="option">
         <mat-form-field appearance="outline">
           <mat-label>Theme</mat-label>
           <mat-select formControlName="theme">
@@ -24,7 +24,7 @@
             }
           </mat-select>
         </mat-form-field>
-      </div>
+      </div> -->
       <div class="option">
         <div>
           <mat-form-field appearance="outline">
