--- a/src/app/util/matchup/summary-core/summary-core.component.html
+++ b/src/app/util/matchup/summary-core/summary-core.component.html
@@ -1,7 +1,7 @@
 @if (summary) {
   <table
     cdk-table
-    [dataSource]="summary.team"
+    [dataSource]="(sortedTeam$ | async) || []"
     matSort
     matSortActive="spe"
     matSortDirection="desc"
