--- a/src/app/drafts/matchup-overview/matchup.scss
+++ b/src/app/drafts/matchup-overview/matchup.scss
@@ -1,3 +1,5 @@
+@use "../../../styles/mixins/buttons" as *;
+
 .widget-container {
   width: fit-content;
   max-width: 100%;
@@ -45,6 +47,10 @@
     column-gap: 1rem;
     z-index: 5001;
 
+    button {
+      @include flat-button-menu(());
+    }
+
     .details-spacer {
       flex-grow: 1;
       display: flex;
@@ -54,13 +60,12 @@
         flex-wrap: wrap;
         flex-direction: row;
         margin-top: -0.5rem;
-        padding: 0.25rem 1rem;
-        border-radius: 0 0 1rem 1rem;
+        padding: 0 1rem 0.25rem;
+        border-radius: 0 0 var(--pdz-shape-corner-sm) var(--pdz-shape-corner-sm);
         width: fit-content;
         justify-content: space-evenly;
         column-gap: 2rem;
         row-gap: 0.125rem;
-        // border-top: px solid var(--pdz-color-menu-divider);
         background-color: var(--pdz-color-surface);
         box-shadow: var(--pdz-level-2);
       }
