--- a/src/app/drafts/matchup-overview/matchup/movechart/movechart.component.html
+++ b/src/app/drafts/matchup-overview/matchup/movechart/movechart.component.html
@@ -1,4 +1,4 @@
-<div class="widget-container" [ngClass]="{ alternate: opponent }">
+<div class="widget-container" [class.alternate]="opponent">
   <div class="widget-header">
     <div class="widget-label">Learned Moves</div>
     <swap-opponent [(ngModel)]="opponent"></swap-opponent>
