--- a/src/app/drafts/matchup-overview/matchup/movechart/movechart.component.scss
+++ b/src/app/drafts/matchup-overview/matchup/movechart/movechart.component.scss
@@ -6,3 +6,18 @@
   scrollbar-gutter: stable;
   margin-right: -0.75rem;
 }
+
+.widget-container {
+  --pdz-cmp-movechart-color: var(--pdz-color-primary);
+  --pdz-cmp-movechart-on-container: var(--pdz-color-on-primary-container);
+  --pdz-cmp-movechart-container: var(--pdz-color-primary-container);
+  --pdz-cmp-movechart-hover: var(--pdz-color-primary-hover);
+  --pdz-cmp-movechart-border: var(--pdz-color-primary-border);
+  &.alternate {
+    --pdz-cmp-movechart-color: var(--pdz-color-secondary);
+    --pdz-cmp-movechart-on-container: var(--pdz-color-on-secondary-container);
+    --pdz-cmp-movechart-container: var(--pdz-color-secondary-container);
+    --pdz-cmp-movechart-hover: var(--pdz-color-secondary-hover);
+    --pdz-cmp-movechart-border: var(--pdz-color-secondary-border);
+  }
+}
