--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -30,7 +30,7 @@
     justify-content: center;
     gap: 0.5rem;
     margin-bottom: 1rem;
-    width: 100%;
+    // width: 100%;
   }
 
   .title-logo {
@@ -168,10 +168,49 @@
   }
 }
 
+.mobile-show {
+  display: none;
+}
+
+.mobile-hidden {
+  display: block;
+}
+
+.mobile-container {
+  display: flex;
+}
+
+@media (max-width: 768px) {
+  .mobile-show {
+    display: block;
+  }
+
+  .mobile-hidden {
+    display: none;
+  }
+
+  .mobile-container {
+    flex-direction: column;
+  }
+
+  .title-container {
+    width: fit-content;
+    flex-direction: col;
+    gap: 1rem;
+    .title-text {
+      font-size: 2rem !important;
+    }
+
+    .subtitle {
+      font-size: 0.9rem;
+    }
+  }
+}
+
 @media (min-width: 768px) {
   .hero-section {
     .title-container div {
-      flex-direction: row;
+      flex-direction: col;
       gap: 1rem;
     }
     .title-text {
