--- a/src/app/drafts/opponent-overview/opponent-score/new-score/opponent-score.component.html
+++ b/src/app/drafts/opponent-overview/opponent-score/new-score/opponent-score.component.html
@@ -1,4 +1,4 @@
-@if (!scoreForm) {
+<!-- @if (!scoreForm) {
   <pdz-loading></pdz-loading>
 } @else {
   <form [formGroup]="scoreForm" class="opponent-score">
@@ -176,4 +176,4 @@
       </div>
     </section>
   </form>
-}
+} -->
