--- a/src/app/league-zone/league-bracket/league-single-elim-bracket/league-bracket-graph.component.scss
+++ b/src/app/league-zone/league-bracket/league-single-elim-bracket/league-bracket-graph.component.scss
@@ -110,7 +110,7 @@
         font-size: 0.7rem;
         color: var(--pdz-color-primary);
         line-height: 0.9rem;
-        font-weight: 700;
+        font-weight: var(--pdz-font-weight-bold);
         white-space: nowrap;
         overflow: hidden;
       }
