--- a/src/styles/pdz-themes/_sunset.scss
+++ b/src/styles/pdz-themes/_sunset.scss
@@ -85,6 +85,12 @@ $theme: (
     logo-top: "purple-500",
     logo-bottom: "pink-500",
     logo-background: "white",
+
+    // Loading Colors
+    loading-primary-high: "purple-600",
+    loading-primary-low: "purple-400",
+    loading-secondary-high: "pink-600",
+    loading-secondary-low: "pink-400",
   ),
   dark: (
     // Surface Colors
@@ -173,5 +179,11 @@ $theme: (
     logo-top: "purple-500",
     logo-bottom: "pink-500",
     logo-background: "white",
+
+    // Loading Colors
+    loading-primary-high: "purple-600",
+    loading-primary-low: "purple-400",
+    loading-secondary-high: "pink-600",
+    loading-secondary-low: "pink-400",
   ),
 );
