--- a/src/app/league-zone/league-schedule/matchup-card/matchup-card.component.scss
+++ b/src/app/league-zone/league-schedule/matchup-card/matchup-card.component.scss
@@ -72,7 +72,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      font-weight: 700;
+      font-weight: var(--pdz-font-weight-bold);
       font-size: 0.8rem;
     }
     mat-icon {
@@ -123,7 +123,7 @@
         width: 1.25rem;
         line-height: 1.25rem;
         text-align: center;
-        font-weight: 700;
+        font-weight: var(--pdz-font-weight-bold);
         font-size: 1rem;
         height: 1.25rem;
         border-radius: var(--pdz-shape-corner-xs);
