--- a/src/app/league-zone/league-trades/trade-card/trade-card.component.scss
+++ b/src/app/league-zone/league-trades/trade-card/trade-card.component.scss
@@ -104,7 +104,7 @@ $trade-sprite-size: 2rem;
   flex-shrink: 0;
 
   mat-icon {
-    font-weight: 700;
+    font-weight: var(--pdz-font-weight-bold);
     font-size: 1.1rem;
     height: 1.1rem;
     width: 1.1rem;
