--- a/src/app/pages/top-navbar/top-navbar.component.html
+++ b/src/app/pages/top-navbar/top-navbar.component.html
@@ -66,8 +66,59 @@
         <span>Other Tools</span>
       </button>
     </div>
+
     <span class="toolbar-spacer"></span>
     <!-- {{ auth.state$ | async | json }} -->
+    <a
+      href="https://shop.pokemondraftzone.com"
+      target="_blank"
+      class="store-button"
+      >Shop<mat-icon
+        matBadge="1"
+        matBadgeSize="small"
+        matBadgeOverlap="false"
+        [matBadgeHidden]="false"
+        >apparel</mat-icon
+      ></a
+    >
+    <a
+      href="https://shop.pokemondraftzone.com"
+      target="_blank"
+      class="store-button"
+      ><mat-icon
+        matBadge="1"
+        matBadgeSize="small"
+        matBadgeOverlap="false"
+        [matBadgeHidden]="false"
+        >shopping_bag</mat-icon
+      ></a
+    >
+
+    <a
+      href="https://shop.pokemondraftzone.com"
+      target="_blank"
+      class="store-button"
+      ><mat-icon
+        matBadge="1"
+        matBadgeSize="small"
+        matBadgeOverlap="false"
+        [matBadgeHidden]="false"
+        >store</mat-icon
+      ></a
+    >
+
+    <a
+      href="https://shop.pokemondraftzone.com"
+      target="_blank"
+      class="store-button"
+      ><mat-icon
+        matBadge="1"
+        matBadgeSize="small"
+        matBadgeOverlap="false"
+        [matBadgeHidden]="false"
+        >storefront</mat-icon
+      ></a
+    >
     <pdz-login-button></pdz-login-button>
   </mat-toolbar>
 </header>
