--- a/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.scss
+++ b/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.scss
@@ -151,7 +151,7 @@
       flex-grow: 1;
       display: flex;
       align-items: center;
-      font-weight: 700;
+      font-weight: var(--pdz-font-weight-bold);
     }
   }
 }
