--- a/src/styles/_shadows.scss
+++ b/src/styles/_shadows.scss
@@ -1,57 +1,59 @@
+@use "../styles/global.scss" as *;
+
 $shadows: (
   0: (
-    0px 0px 0px 0px rgba(0, 0, 0, 0.2),
-    0px 0px 0px 0px rgba(0, 0, 0, 0.14),
-    0px 0px 0px 0px rgba(0, 0, 0, 0.12),
+    0px 0px 0px 0px rgba(var(--pdz-color-shadow-rgb), 0.2),
+    0px 0px 0px 0px rgba(var(--pdz-color-shadow-rgb), 0.14),
+    0px 0px 0px 0px rgba(var(--pdz-color-shadow-rgb), 0.12),
   ),
   1: (
-    0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 3px 0px rgba(0, 0, 0, 0.12),
+    0px 2px 1px -1px rgba(var(--pdz-color-shadow-rgb), 0.2),
+    0px 1px 1px 0px rgba(var(--pdz-color-shadow-rgb), 0.14),
+    0px 1px 3px 0px rgba(var(--pdz-color-shadow-rgb), 0.12),
   ),
   2: (
-    0px 3px 3px -2px rgba(0, 0, 0, 0.2),
-    0px 3px 4px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 8px 0px rgba(0, 0, 0, 0.12),
+    0px 3px 3px -2px rgba(var(--pdz-color-shadow-rgb), 0.2),
+    0px 3px 4px 0px rgba(var(--pdz-color-shadow-rgb), 0.14),
+    0px 1px 8px 0px rgba(var(--pdz-color-shadow-rgb), 0.12),
   ),
   3: (
-    0px 3px 5px -1px rgba(0, 0, 0, 0.2),
-    0px 6px 10px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 18px 0px rgba(0, 0, 0, 0.12),
+    0px 3px 5px -1px rgba(var(--pdz-color-shadow-rgb), 0.2),
+    0px 6px 10px 0px rgba(var(--pdz-color-shadow-rgb), 0.14),
+    0px 1px 18px 0px rgba(var(--pdz-color-shadow-rgb), 0.12),
   ),
   4: (
-    0px 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0px 8px 10px 1px rgba(0, 0, 0, 0.14),
-    0px 3px 14px 2px rgba(0, 0, 0, 0.12),
+    0px 5px 5px -3px rgba(var(--pdz-color-shadow-rgb), 0.2),
+    0px 8px 10px 1px rgba(var(--pdz-color-shadow-rgb), 0.14),
+    0px 3px 14px 2px rgba(var(--pdz-color-shadow-rgb), 0.12),
   ),
   5: (
-    0px 7px 8px -4px rgba(0, 0, 0, 0.2),
-    0px 12px 17px 2px rgba(0, 0, 0, 0.14),
-    0px 5px 22px 4px rgba(0, 0, 0, 0.12),
+    0px 7px 8px -4px rgba(var(--pdz-color-shadow-rgb), 0.2),
+    0px 12px 17px 2px rgba(var(--pdz-color-shadow-rgb), 0.14),
+    0px 5px 22px 4px rgba(var(--pdz-color-shadow-rgb), 0.12),
   ),
   "inset-1": (
-    inset 0px 2px 2px -1px rgba(0, 0, 0, 0.2),
-    inset 0px 1px 2px 0px rgba(0, 0, 0, 0.14),
-    inset 0px 1px 4px 0px rgba(0, 0, 0, 0.12),
+    inset 0px 2px 2px -1px rgba(var(--pdz-color-shadow-rgb), 0.2),
+    inset 0px 1px 2px 0px rgba(var(--pdz-color-shadow-rgb), 0.14),
+    inset 0px 1px 4px 0px rgba(var(--pdz-color-shadow-rgb), 0.12),
   ),
   "inset-2": (
-    inset 0px 3px 3px -2px rgba(0, 0, 0, 0.2),
-    inset 0px 3px 4px 0px rgba(0, 0, 0, 0.14),
-    inset 0px 1px 8px 0px rgba(0, 0, 0, 0.12),
+    inset 0px 3px 3px -2px rgba(var(--pdz-color-shadow-rgb), 0.2),
+    inset 0px 3px 4px 0px rgba(var(--pdz-color-shadow-rgb), 0.14),
+    inset 0px 1px 8px 0px rgba(var(--pdz-color-shadow-rgb), 0.12),
   ),
   "inset-3": (
-    inset 0px 3px 5px -1px rgba(0, 0, 0, 0.2),
-    inset 0px 6px 10px 0px rgba(0, 0, 0, 0.14),
-    inset 0px 1px 18px 0px rgba(0, 0, 0, 0.12),
+    inset 0px 3px 5px -1px rgba(var(--pdz-color-shadow-rgb), 0.2),
+    inset 0px 6px 10px 0px rgba(var(--pdz-color-shadow-rgb), 0.14),
+    inset 0px 1px 18px 0px rgba(var(--pdz-color-shadow-rgb), 0.12),
   ),
   "inset-4": (
-    inset 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
-    inset 0px 8px 10px 1px rgba(0, 0, 0, 0.14),
-    inset 0px 3px 14px 2px rgba(0, 0, 0, 0.12),
+    inset 0px 5px 5px -3px rgba(var(--pdz-color-shadow-rgb), 0.2),
+    inset 0px 8px 10px 1px rgba(var(--pdz-color-shadow-rgb), 0.14),
+    inset 0px 3px 14px 2px rgba(var(--pdz-color-shadow-rgb), 0.12),
   ),
   "inset-5": (
-    inset 0px 7px 8px -4px rgba(0, 0, 0, 0.2),
-    inset 0px 12px 17px 2px rgba(0, 0, 0, 0.14),
-    inset 0px 5px 22px 4px rgba(0, 0, 0, 0.12),
+    inset 0px 7px 8px -4px rgba(var(--pdz-color-shadow-rgb), 0.2),
+    inset 0px 12px 17px 2px rgba(var(--pdz-color-shadow-rgb), 0.14),
+    inset 0px 5px 22px 4px rgba(var(--pdz-color-shadow-rgb), 0.12),
   ),
 );
